GNOME Bugzilla – Bug 641896
gnome-shell does not forward GDK_KEY_PRESS to clutter_event_put
Last modified: 2011-02-09 17:03:25 UTC
IBus uses gdk_event_put() to forward the key events in the GTK IM client. But currently gnome-shell search box doesn't show any chars. It seems there is a typo in gnome_shell_gdk_event_handler().
Created attachment 180437 [details] [review] Patch for gnome-shell-plugin.c If I applied the attached patch, gnome-shell search box could show the typed chars with ibus.
Created attachment 180438 [details] [review] Patch for gnome-shell-plugin.c Attached the correct file again.
Oops. Thanks for catch that mistake! Pushed with a rewritten commit message.