Fix press/release confusion when synthesizing clutter key events

We were generating presses for releases and vice-versa.

https://bugzilla.gnome.org/show_bug.cgi?id=641896